Clean up some gradle deprecation warnings

--- a/ktlint.gradle
+++ b/ktlint.gradle
@@ -6,17 +6,17 @@ dependencies {
     ktlint "com.pinterest.ktlint:ktlint-cli:${ktlintVersion}"
 }
 
-task ktlint(type: JavaExec, group: "verification") {
+tasks.register('ktlint', JavaExec) {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass = "com.pinterest.ktlint.Main"
     args "src/**/*.kt", "!**/db/migration/**/*.kt"
 }
 check.dependsOn ktlint
 
-task ktlintFormat(type: JavaExec, group: "formatting") {
+tasks.register('ktlintFormat', JavaExec) {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass = "com.pinterest.ktlint.Main"
     args "-F", "src/**/*.kt", "!**/db/migration/**/*.kt"
 }
