--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven { url("https://repo.spring.io/plugins-release") }
-        maven { url("https://plugins.gradle.org/m2/") }
+        maven { url = uri("https://repo.spring.io/plugins-release") }
+        maven { url = uri("https://plugins.gradle.org/m2/") }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
@@ -73,7 +73,7 @@ sourceSets {
 test {
     testLogging {
         events "started", "passed", "failed", "skipped"
-        exceptionFormat "full"
+        exceptionFormat = "full"
     }
 
     systemProperties = System.properties
