--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        maven { url("https://repo.spring.io/plugins-release") }
-        maven { url("https://plugins.gradle.org/m2/") }
+        maven { url = uri("https://repo.spring.io/plugins-release") }
+        maven { url = uri("https://plugins.gradle.org/m2/") }
     }
     dependencies {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
