Remove Flyway versioning so Spring Boot can use the version it prefers. See: https://docs.spring.io/spring-boot/appendix/dependency-versions/coordinates.html https://github.com/spring-projects/spring-boot/issues/33391

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("org.flywaydb:flyway-core:${flywayVersion}")
+    implementation("org.flywaydb:flyway-core")
     implementation("com.h2database:h2:${h2Version}")
 
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
