--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
 
-    implementation("org.flywaydb:flyway-core:${flywayVersion}")
+    implementation("org.flywaydb:flyway-core")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
 
