Sync the kotlin plugin and kotlin versions

--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     testImplementation("junit:junit")
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     // DB
