--- a/components/audit/build.gradle
+++ b/components/audit/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     testImplementation("junit:junit")
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
