--- a/components/management/build.gradle
+++ b/components/management/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     testImplementation project(path: ":components:test-support", configuration: "testOutput")
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
