--- a/components/string-utilities/build.gradle
+++ b/components/string-utilities/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     testImplementation("junit:junit")
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     implementation("com.google.guava:guava:${guavaVersion}")
