--- a/components/test-support/build.gradle
+++ b/components/test-support/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-validation')
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
