--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -59,7 +59,7 @@ dependencies {
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
