--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     testRuntimeOnly('org.junit.platform:junit-platform-launcher')
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 
     // DB
     implementation("org.flywaydb:flyway-core")
