--- a/components/errors/build.gradle
+++ b/components/errors/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 
     implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
