--- a/components/management/build.gradle
+++ b/components/management/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
 }
