--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -55,9 +55,10 @@ dependencies {
 
     // DB
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
+    implementation("org.flywaydb:flyway-mysql:${flywayVersion}")
+    implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("com.h2database:h2:${h2Version}")
 
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
