--- a/components/encryption/build.gradle
+++ b/components/encryption/build.gradle
@@ -45,8 +45,9 @@ dependencies {
 
     // DB
     testImplementation("org.flywaydb:flyway-core:${flywayVersion}")
+    testImplementation("org.flywaydb:flyway-mysql:${flywayVersion}")
+    testImplementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
-
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
 
