fix: Some unit test hangs during flyway migration
- Because of the `create index concurrently` statements.
- Added `FlywayMigrationStrategy` bean to set `PostgreSQL` `transactionalLock` to `false` for flyway migration when tests run.

--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     // DB
-//    implementation("org.flywaydb:flyway-core:${flywayVersion}")
+    testImplementation("org.flywaydb:flyway-core:${flywayVersion}")
+    testImplementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
     implementation("com.h2database:h2:${h2Version}")
