--- a/components/errors/build.gradle
+++ b/components/errors/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
+    implementation("com.jayway.jsonpath:json-path")
     implementation("com.google.guava:guava:${guavaVersion}")
 }
 
