--- a/components/generate/build.gradle
+++ b/components/generate/build.gradle
@@ -44,9 +44,9 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    implementation("com.jayway.jsonpath:json-path:${jsonPathVersion}")
+    implementation("com.jayway.jsonpath:json-path")
     implementation("com.google.guava:guava:${guavaVersion}")
-    implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("org.apache.commons:commons-lang3")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 }
 
