--- a/components/permissions/build.gradle
+++ b/components/permissions/build.gradle
@@ -48,14 +48,14 @@ dependencies {
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("org.flywaydb:flyway-mysql:${flywayVersion}")
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
-    implementation("org.postgresql:postgresql:${postgresqlJdbcVersion}")
+    implementation("org.postgresql:postgresql")
     implementation("com.h2database:h2:${h2Version}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
 
 
     // Other
     implementation("com.google.guava:guava:${guavaVersion}")
-    implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
+    implementation("org.apache.commons:commons-lang3")
     implementation("commons-io:commons-io:${apacheCommonsIoVersion}")
 }
 
