--- a/applications/credhub-api/src/main/resources/application.yml
+++ b/applications/credhub-api/src/main/resources/application.yml
@@ -9,10 +9,11 @@ management:
   endpoints:
     web:
       base-path: /
-    enabled-by-default: false
+    access:
+      default: none
   endpoint:
     health:
-      enabled: true
+      access: unrestricted
   server:
     ssl:
       enabled: false
