fix: flyway.clean() failure in unit tests - Set `flyway.cleanDisabled` property to false for unit tests.

--- a/applications/credhub-api/src/test/resources/application-unit-test.yml
+++ b/applications/credhub-api/src/test/resources/application-unit-test.yml
@@ -48,7 +48,8 @@ spring:
       maximum-pool-size: 4
       idle-timeout: 500
       minimum-idle: 2
-
+  flyway:
+    cleanDisabled: false
 #logging:
 #  level:
 #    org:
