fix: Instant JDBC type for credhub severf app - Set `hibernate.type.preferred_instant_jdbc_type` to `TIMESTAMP` for backward compatibility.

--- a/applications/credhub-api/src/main/resources/application.yml
+++ b/applications/credhub-api/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
   profiles:
     group:
       "dev": "dev-remote-uaa"
+  jpa:
+    properties:
+      hibernate:
+        type:
+          preferred_instant_jdbc_type: TIMESTAMP
 
 management:
   endpoints:
