refactor: unnecessary dependency version specification
- as the version we get from our current version of
spring boot is the same: https://github.com/spring-projects/spring-boot/blob/v3.4.5/spring-boot-project/spring-boot-dependencies/build.gradle#L482
- so better to just let spring boot manage this

[https://vmw-jira.broadcom.net/browse/TNZ-38483]

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
     implementation("org.flywaydb:flyway-mysql:${flywayVersion}")
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("com.h2database:h2")
 
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
     api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
