--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation("org.flywaydb:flyway-mysql:${flywayVersion}")
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("com.h2database:h2")
 
     // Other
     api("org.bouncycastle:bc-fips:${bcFipsVersion}")
