--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("com.h2database:h2")
 
     // proto
     implementation "io.grpc:grpc-services:${grpcVersion}"
