--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation("org.flywaydb:flyway-mysql:${flywayVersion}")
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql")
-    implementation("com.h2database:h2:${h2Version}")
+    implementation("com.h2database:h2")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
 
 
