refactor: delegate some dep versioning to spring boot
- commit history suggests that these explicit versioning is
intended to bring in dependencies with higher versions that
those provided by the spring boot version we used at the time,
due to the CVEs contained in these old version:
 - https://github.com/cloudfoundry/credhub/commit/1f4583c0b30a1424a1627e599214b644e2118830
 - https://github.com/cloudfoundry/credhub/commit/2ab6914a8011723ee8d5897dca4c7012a74d78b1
- now the versions brought in by spring boot (which is now updated)
are CVE-free, albeit slightly behind (which is normal as spring boot
is trying to balance CVE-free with stability and compatibility among
deps), it is ok to let spring boot manage these deps (just like other
deps)
- reference:
  https://github.com/spring-projects/spring-boot/blob/v3.4.5/spring-boot-project/spring-boot-dependencies/build.gradle#L482
  (shows what versions our spring boot is bringing in)

[https://vmw-jira.broadcom.net/browse/TNZ-38483]

--- a/backends/shared-backend-configuration/build.gradle
+++ b/backends/shared-backend-configuration/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("commons-codec:commons-codec")
 
     // DB
     implementation("org.flywaydb:flyway-core:${flywayVersion}")
