--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     api("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
     implementation("org.apache.commons:commons-lang3")
-    implementation("commons-codec:commons-codec:${commonsCodecVersion}")
+    implementation("commons-codec:commons-codec")
     implementation("org.apache.httpcomponents.client5:httpclient5")
     implementation("com.google.protobuf:protobuf-java:${protoBufJavaVersion}")
 }
