Configure extendedKeyUsage for dev TLS certificates
* some clients like Python >= 3.13 have a strict X509 validation enabled by default and require correct extendedKeyUsage setting
* so set "extendedKeyUsage = serverAuth" for the dev TLS certificates (credhub_server_ca and localhost)

--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ gradle-app.setting
 #ignore certificate configuration files
 applications/credhub-api/src/test/resources/client.cnf
 applications/credhub-api/src/test/resources/server.cnf
+applications/credhub-api/src/test/resources/server_ca.cnf
 
 # Ignore any key stores
 *.jks
