--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -3,9 +3,21 @@ buildscript {
         springCloudContractVersion = '4.2.1'
     }
     repositories {
-        mavenCentral()
-        maven { url("https://repo.spring.io/plugins-release") }
-        maven { url("https://plugins.gradle.org/m2/") }
+        def artifactRepoUrl = System.getenv("ARTIFACTORY_URL")
+        if (artifactRepoUrl != null) {
+            maven {
+                url artifactRepoUrl
+                credentials {
+                    username = System.getenv("ARTIFACTORY_USER")
+                    password = System.getenv("ARTIFACTORY_PASS")
+                }
+            }
+        }
+        else {
+            mavenCentral()
+            maven { url("https://repo.spring.io/plugins-release") }
+            maven { url("https://plugins.gradle.org/m2/") }
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
@@ -24,7 +36,19 @@ apply from: "${rootDir.toPath()}/kotlin.gradle"
 apply from: "${rootDir.toPath()}/ktlint.gradle"
 
 repositories {
-    mavenCentral()
+    def artifactRepoUrl = System.getenv("ARTIFACTORY_URL")
+    if (artifactRepoUrl != null) {
+        maven {
+            url artifactRepoUrl
+            credentials {
+                username = System.getenv("ARTIFACTORY_USER")
+                password = System.getenv("ARTIFACTORY_PASS")
+            }
+        }
+    }
+    else {
+        mavenCentral()
+    }
 }
 
 dependencies {
