--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,5 +1,17 @@
 repositories {
-    gradlePluginPortal()
+    def artifactRepoUrl = System.getenv("ARTIFACTORY_URL")
+    if (artifactRepoUrl != null) {
+        maven {
+            url artifactRepoUrl
+            credentials {
+                username = System.getenv("ARTIFACTORY_USER")
+                password = System.getenv("ARTIFACTORY_PASS")
+            }
+        }
+    }
+    else {
+        gradlePluginPortal()
+    }
 }
 
 dependencies {
