refactor: Use common shared respositories setting - Instead of having one in each subproject. - Except inside `buildscript` block, as the settings in `settings.gradle` is not applied there.

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,22 @@ include "components:permissions"
 include "components:string-utilities"
 include "components:test-support"
 include "components:time-support"
+
+dependencyResolutionManagement {
+    repositories {
+        def artifactRepoUrl = System.getenv("ARTIFACTORY_URL")
+        if (artifactRepoUrl != null) {
+            maven {
+                url artifactRepoUrl
+                credentials {
+                    username = System.getenv("ARTIFACTORY_USER")
+                    password = System.getenv("ARTIFACTORY_PASS")
+                }
+            }
+        }
+        else {
+            mavenCentral()
+            gradlePluginPortal()
+        }
+    }
+}
