--- a/backends/credhub/build.gradle
+++ b/backends/credhub/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         }
         else {
             mavenCentral()
-            maven { url("https://repo.spring.io/plugins-release") }
-            maven { url("https://plugins.gradle.org/m2/") }
+            maven { url = "https://repo.spring.io/plugins-release" }
+            maven { url = "https://plugins.gradle.org/m2/" }
         }
     }
     dependencies {
@@ -111,7 +111,7 @@ sourceSets {
 test {
     testLogging {
         events "started", "passed", "failed", "skipped"
-        exceptionFormat "full"
+        exceptionFormat = "full"
     }
 
     afterTest { descriptor, result ->
