--- a/backends/remote/build.gradle
+++ b/backends/remote/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         }
         else {
             mavenCentral()
-            maven { url("https://repo.spring.io/plugins-release") }
-            maven { url("https://plugins.gradle.org/m2/") }
+            maven { url = "https://repo.spring.io/plugins-release" }
+            maven { url = "https://plugins.gradle.org/m2/" }
         }
     }
     dependencies {
@@ -117,7 +117,7 @@ protobuf {
 test {
     testLogging {
         events "started", "passed", "failed", "skipped"
-        exceptionFormat "full"
+        exceptionFormat = "full"
     }
 
     systemProperties = System.properties
