--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ buildscript {
         }
         else {
             mavenCentral()
-            maven { url("https://repo.spring.io/plugins-release") }
-            maven { url("https://plugins.gradle.org/m2/") }
+            maven { url = "https://repo.spring.io/plugins-release" }
+            maven { url = "https://plugins.gradle.org/m2/" }
         }
     }
     dependencies {
