gradle 9 has new behavior when test class not found

--- a/applications/credhub-api/build.gradle
+++ b/applications/credhub-api/build.gradle
@@ -121,3 +121,10 @@ test {
     systemProperties["java.security.egd"] = System.getProperty("java.security.egd", "file:/dev/urandom")
     outputs.upToDateWhen { false }
 }
+
+// Configure contractTest task created by Spring Cloud Contract plugin
+tasks.withType(Test).configureEach {
+    if (name == 'contractTest') {
+        failOnNoDiscoveredTests = false
+    }
+}
