--- a/components/credentials/build.gradle
+++ b/components/credentials/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
+    runtimeOnly("software.amazon.jdbc:aws-advanced-jdbc-wrapper:${awsAdvancedJdbcVersion}")
     implementation("com.h2database:h2")
 
     // proto
