--- a/components/auth/build.gradle
+++ b/components/auth/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation("org.flywaydb:flyway-database-postgresql:${flywayVersion}")
     implementation("org.postgresql:postgresql")
     implementation("org.mariadb.jdbc:mariadb-java-client:${mariadbJdbcVersion}")
+    runtimeOnly("software.amazon.jdbc:aws-advanced-jdbc-wrapper:${awsAdvancedJdbcVersion}")
     implementation("com.h2database:h2")
 
     // Other
